fix images and spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -102,29 +102,26 @@
   h1 {
     /* font-family: TC Brookleigh; */
     font-family: Thasadith;
-    font-size: 75px;
-    font-weight: 100;
-    line-height: 78.82px;
+    font-weight: 400;
     letter-spacing: -0.02em;
     text-align: center;
+    font-size: clamp(1.5rem, 4vw + 1rem, 4.0rem);
   }
   
   h2 {
     /* font-family: TC Brookleigh; */
     font-family: Thasadith;
-    font-size: 60px;
-    font-weight: 100;
-    line-height: 15px;
+    font-size: clamp(0.5rem, 4vw + 1rem, 3.0rem);
+    font-weight: 400;
     letter-spacing: -0.02em;
     text-align: center;
   }
   
   p {
     font-family: Thasadith;
-    font-size: 24px;
-    font-weight: 100;
-    line-height: 20px;
+    font-size: clamp(0.1rem, 4vw + 1rem, 1.5rem);
+    font-weight: 400;
+    line-height: clamp(1.0rem, 4vw + 1rem, 2.0rem);
     letter-spacing: 0.22em;
-    text-align: justified;
   }
   
